--- a/top_storylines.html
+++ b/top_storylines.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storylines - Season 47 Round 5</title>
+    <title>Storylines - Season 47 Round 6</title>
     <style>
         :root {
             --bg-primary: #2d5266;
@@ -279,7 +279,7 @@
     <div class="container">
         <header>
             <h1>📺 Storylines of the Week</h1>
-            <div class="subtitle">Season 47 &middot; Round 5</div>
+            <div class="subtitle">Season 47 &middot; Round 6</div>
             <div class="stats">Top 10 of 192 pairings</div>
         </header>
         
@@ -383,22 +383,22 @@
                     <div class="rank top-3">#1</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/adande1/" target="_blank">adande1</a>
+                            <a href="https://www.lichess4545.com/team4545/player/jwwells42/" target="_blank">jwwells42</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/alex11star/" target="_blank">alex11star</a>
+                            <a href="https://www.lichess4545.com/team4545/player/bufferunderrun/" target="_blank">bufferunderrun</a>
                         </div>
-                        <div class="teams">Blunder? I hardly know her vs Essence of Sahkal and the Fragrances of the 7</div>
+                        <div class="teams">We are the Cham's peons vs PawnOnF6_IsThematic</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">11.5</div>
+                        <div class="score-value">11.0</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔥 Hot streak clash! (3W vs 4W)</span>
-                    <span class="reason">🏆 Huge for team standings!</span>
-                    <span class="reason">🎖️ Veterans (241+103 games)</span>
-                    <span class="reason">👀 Vets first meeting! (241+103 games, never faced)</span>
+                    <span class="reason">🔄 Rematch #3 (0-0-2)</span>
+                    <span class="reason">❄️ Both struggling (6L vs 2L)</span>
+                    <span class="reason">🎖️ Veterans (213+254 games)</span>
+                    <span class="reason">🤝 Former teammates on Infinite blitz tiebreaks paradox</span>
                 </div>
             </div>
 
@@ -407,21 +407,21 @@
                     <div class="rank top-3">#2</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/NLance/" target="_blank">NLance</a>
+                            <a href="https://www.lichess4545.com/team4545/player/CapeStGeorge/" target="_blank">CapeStGeorge</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/jessehf/" target="_blank">jessehf</a>
+                            <a href="https://www.lichess4545.com/team4545/player/NLance/" target="_blank">NLance</a>
                         </div>
-                        <div class="teams">Charge of the Suggestion Brigade vs The Old Man and the C-file</div>
+                        <div class="teams">Too lazy to accept the Morra vs Charge of the Suggestion Brigade</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">10.0</div>
+                        <div class="score-value">7.7</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🎂 jessehf's 200th game!</span>
-                    <span class="reason">🔄 Rematch #3 (1-0-1)</span>
-                    <span class="reason">🎖️ Veterans (223+199 games)</span>
+                    <span class="reason">🔄 Rematch #3 (0-0-2)</span>
+                    <span class="reason">🎖️ Veterans (67+224 games)</span>
+                    <span class="reason">🤝 Former teammates on Nobody Likes my Suggestion</span>
                 </div>
             </div>
 
@@ -430,21 +430,22 @@
                     <div class="rank top-3">#3</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/Zanderqfb/" target="_blank">Zanderqfb</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Pope123/" target="_blank">Pope123</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/JokicInator15/" target="_blank">JokicInator15</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Jg777/" target="_blank">Jg777</a>
                         </div>
-                        <div class="teams">Blunder? I hardly know her vs Essence of Sahkal and the Fragrances of the 7</div>
+                        <div class="teams">Cold War Propaggnanandhaa vs I literally don't Keres</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">7.2</div>
+                        <div class="score-value">7.4</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔄 Rematch (1-0-0)</span>
-                    <span class="reason">🏆 Huge for team standings!</span>
-                    <span class="reason">🎖️ Experience (40+79 games)</span>
+                    <span class="reason">❄️ Both struggling (2L vs 3L)</span>
+                    <span class="reason">🎖️ Veterans (88+173 games)</span>
+                    <span class="reason">🤝 Former teammates on Pope, King, and plebs in between</span>
+                    <span class="reason">👀 Vets first meeting! (88+173 games, never faced)</span>
                 </div>
             </div>
 
@@ -453,20 +454,21 @@
                     <div class="rank ">#4</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/mronemore/" target="_blank">mronemore</a>
+                            <a href="https://www.lichess4545.com/team4545/player/RPCX/" target="_blank">RPCX</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/bigboss12345/" target="_blank">bigboss12345</a>
+                            <a href="https://www.lichess4545.com/team4545/player/adande1/" target="_blank">adande1</a>
                         </div>
-                        <div class="teams">Our team name could knock off your team name vs Year of the “How does the horsey move?”</div>
+                        <div class="teams">Think Like a Grandpatzer vs Blunder? I hardly know her</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">6.6</div>
+                        <div class="score-value">7.1</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">⚔️ Rivals! Met 3x before (0-0-3)</span>
-                    <span class="reason">🎖️ Veterans (184+77 games)</span>
+                    <span class="reason">🔥 Both on win streaks (2W vs 4W)</span>
+                    <span class="reason">🥈 Big for team standings!</span>
+                    <span class="reason">🎖️ Veterans (8+242 games)</span>
                 </div>
             </div>
 
@@ -475,20 +477,21 @@
                     <div class="rank ">#5</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/rio2018/" target="_blank">rio2018</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Bpack/" target="_blank">Bpack</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/yaminejamal1/" target="_blank">yaminejamal1</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Rolihlahla/" target="_blank">Rolihlahla</a>
                         </div>
-                        <div class="teams">Essence of Sahkal and the Fragrances of the 7 vs Blunder? I hardly know her</div>
+                        <div class="teams">Essence of Sahkal and the Fragrances of the 7 vs Proof by Checkmate</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">6.0</div>
+                        <div class="score-value">6.6</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔥 Both on win streaks (2W vs 3W)</span>
-                    <span class="reason">🏆 Huge for team standings!</span>
+                    <span class="reason">🔄 Rematch (0-1-0)</span>
+                    <span class="reason">🥉 Important for team standings!</span>
+                    <span class="reason">🎖️ Veterans (57+205 games)</span>
                 </div>
             </div>
 
@@ -497,11 +500,11 @@
                     <div class="rank ">#6</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/M_H_R/" target="_blank">M_H_R</a>
+                            <a href="https://www.lichess4545.com/team4545/player/yaminejamal1/" target="_blank">yaminejamal1</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/TheChessPhoenix/" target="_blank">TheChessPhoenix</a>
+                            <a href="https://www.lichess4545.com/team4545/player/switchoffengine/" target="_blank">switchoffengine</a>
                         </div>
-                        <div class="teams">Better Call Tal vs 47 is not prime number</div>
+                        <div class="teams">Blunder? I hardly know her vs Think Like a Grandpatzer</div>
                     </div>
                     <div class="score-badge">
                         <div class="score-value">6.0</div>
@@ -519,20 +522,21 @@
                     <div class="rank ">#7</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/HighonPotnuse/" target="_blank">HighonPotnuse</a>
+                            <a href="https://www.lichess4545.com/team4545/player/tommeketoch/" target="_blank">tommeketoch</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/IckyDemon/" target="_blank">IckyDemon</a>
+                            <a href="https://www.lichess4545.com/team4545/player/timothyha/" target="_blank">timothyha</a>
                         </div>
-                        <div class="teams">Essence of Sahkal and the Fragrances of the 7 vs Blunder? I hardly know her</div>
+                        <div class="teams">Essence of Sahkal and the Fragrances of the 7 vs Proof by Checkmate</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">5.8</div>
+                        <div class="score-value">5.7</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🏆 Huge for team standings!</span>
-                    <span class="reason">🎖️ Experience (130+52 games)</span>
+                    <span class="reason">🥉 Important for team standings!</span>
+                    <span class="reason">🎖️ Veterans (96+246 games)</span>
+                    <span class="reason">👀 Vets first meeting! (96+246 games, never faced)</span>
                 </div>
             </div>
 
@@ -541,20 +545,20 @@
                     <div class="rank ">#8</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/GroneN/" target="_blank">GroneN</a>
+                            <a href="https://www.lichess4545.com/team4545/player/tomshko/" target="_blank">tomshko</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/tommeketoch/" target="_blank">tommeketoch</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Hesperian/" target="_blank">Hesperian</a>
                         </div>
-                        <div class="teams">Blunder? I hardly know her vs Essence of Sahkal and the Fragrances of the 7</div>
+                        <div class="teams">47 is not prime number vs Elo from the other side</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">5.6</div>
+                        <div class="score-value">5.5</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
                     <span class="reason">🏆 Huge for team standings!</span>
-                    <span class="reason">🎖️ Experience (66+95 games)</span>
+                    <span class="reason">🎖️ Experience (79+72 games)</span>
                 </div>
             </div>
 
@@ -563,20 +567,20 @@
                     <div class="rank ">#9</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/Nairwolf/" target="_blank">Nairwolf</a>
+                            <a href="https://www.lichess4545.com/team4545/player/akristjansson/" target="_blank">akristjansson</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/mqll/" target="_blank">mqll</a>
+                            <a href="https://www.lichess4545.com/team4545/player/sterpfi/" target="_blank">sterpfi</a>
                         </div>
-                        <div class="teams">Charge of the Suggestion Brigade vs The Old Man and the C-file</div>
+                        <div class="teams">Elo from the other side vs 47 is not prime number</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">5.4</div>
+                        <div class="score-value">5.5</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔄 Rematch (1-0-0)</span>
-                    <span class="reason">🎖️ Veterans (141+206 games)</span>
+                    <span class="reason">🎖️ FM sterpfi in the mix</span>
+                    <span class="reason">🏆 Huge for team standings!</span>
                 </div>
             </div>
 
@@ -585,21 +589,20 @@
                     <div class="rank ">#10</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/LemuelGullible/" target="_blank">LemuelGullible</a>
+                            <a href="https://www.lichess4545.com/team4545/player/electricfalcon/" target="_blank">electricfalcon</a>
                             <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/KS_Legion_Legionowo/" target="_blank">KS_Legion_Legionowo</a>
+                            <a href="https://www.lichess4545.com/team4545/player/mongreltiger/" target="_blank">mongreltiger</a>
                         </div>
-                        <div class="teams">Elo from the other side vs Swindlers, patzers, and pawn pushers</div>
+                        <div class="teams">Spice Advantage - 47 Special Seasonings vs Leo's Lions</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">5.3</div>
+                        <div class="score-value">5.4</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🥉 Important for team standings!</span>
-                    <span class="reason">🎖️ Veterans (92+168 games)</span>
-                    <span class="reason">👀 Vets first meeting! (92+168 games, never faced)</span>
+                    <span class="reason">🔄 Rematch #3 (1-1-0)</span>
+                    <span class="reason">🎖️ Veterans (191+50 games)</span>
                 </div>
             </div>
 
